ServiceEntry-and-WorkloadEntry/04-Egress-gateway/02-serviceentry-nginx.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: nginx
spec:
  hosts:
  - nginx.icloud2native.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
    targetPort: 8091 # 关联的后端endpoint
  location: MESH_EXTERNAL
  resolution: STATIC
  workloadSelector:
    labels:
      app: nginx
---
